--- a/css/pagesContent.css
+++ b/css/pagesContent.css
@@ -517,6 +517,11 @@
 		margin-bottom: 0px !important;
 		box-shadow: none !important
 	}
+	#prefs {
+		background: transparent !important;
+		border: none !important;
+		border-radius: 0px !important;
+	}
 }
 
 @-moz-document url-prefix("about:preferences") {
@@ -545,7 +550,7 @@
 		margin: var(--uwp-expander-spacing) 0 0 0 !important;
 	}
 	.privacy-detailedoption.selected {
-		background-color: var(--section-highlight-background-color) !important;
+		background-color: color-mix(in srgb, AccentColor 40%, var(--uwp-global-back)) !important;
 		border-color: var(--in-content-accent-color) !important;
 	}
 	.content-blocking-category > .indent {
@@ -656,6 +661,12 @@
 	.help-button > .text-link {
 		margin-inline-start: 0px !important;
 		height: 40px !important;
+	}
+	#translations-manage-install-list {
+		background: transparent !important;
+	}
+	.translations-manage-language {
+		border: none !important;
 	}
 }
 
